# ProjetoCG

Fase1/: to-do.txt
Fase1/src/: CMakeLists.txt  Figure.cpp  Point.h  engine.cpp  generator  generator.cpp
Fase1/src/output/: cone_1_2_4_3.3d  sphere_1_10_10.3d
Fase1/src/utils/: Config.cpp  Figure.cpp  Figure.h
Fase2/src/: CMakeLists.txt  engine.cpp  generator.cpp
Fase2/src/utils/: Figure.cpp  Figure.h  Group.cpp
Fase3/src/: CMakeLists.txt  engine.cpp  generator.cpp
Fase3/src/build_fase3/: CMakeCache.txt  Makefile  cmake_install.cmake  engine
Fase3/src/build_fase3/output/: asteroid_r012_s22_t22.3d
Fase3/src/build_mac/: CMakeCache.txt  Makefile  bezier_10.3d  cmake_install.cmake  engine  generator
Fase3/src/build_mac/output/: asteroid_r015_s16_t16.3d  asteroid_test.3d
Fase3/src/build_mac/test_files_phase_3/: sistema_solar_v2.xml  sistema_solar_v3.xml
Fase3/src/utils/: Config.cpp  Config.h  Figure.cpp  Figure.h  Group.cpp  Group.h
Fase4/: estrelas.xml
Fase4/src/: CMakeLists.txt  engine.cpp
Fase4/src/build_mac/: CMakeCache.txt  Makefile  cmake_install.cmake  engine  estrelas.py  generator  sistema_solar_v2.xml  sistema_solar_v3.xml
Fase4/src/build_mac/output/: asteroid_belt_1.3d  asteroid_belt_2.3d  asteroid_belt_3.3d  asteroid_r008_s10_t10.3d  bezier_10.3d  box_2_3.3d  cone_1_2_4_3.3d  ring.3d  sphere.3d
Fase4/src/build_mac/test_files_phase_4/: test_4_1.xml  test_4_2.xml  test_4_3.xml  test_4_4.xml  test_4_5.xml  test_4_6.xml
Fase4/src/utils/: Config.cpp  Config.h  Figure.cpp  Figure.h  Group.cpp  Group.h  Point.h
